localdev/terraform/modules/vcs_files/mr4_files/apps/httpbin/base/external-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpbin-external
  annotations:
    kubernetes.io/ingress.class: myingressclass
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /httpbin/(.*)
            backend:
              serviceName: httpbin
              servicePort: 8080
